src/test/deca/syntax/valid/if.deca
{
    if (true) {
        println("hey");
    } else if (false) {
        println("bonjour");
    } else {
        println("toujours");
   }
}