src/test/deca/syntax/invalid/while-wrongOrder.deca
{
    (3 < 5) while {
        print("hey");
        }
}